CHANGES
=======

* add readme notes on mac and fedora
* fix documentation
* remove examples
* move os() to target
* fix bug in run with timeout
* add timeout to run()
* add timeout for is\_process\_running
* installation documentation
* add is\_service\_running()
* refine get/set file
* fix get\_package\_version()
* fix is\_process\_running()
* remove host install - should be installed manually
* adding package classifiers
* post merge requirments refres
* adding devpi client
* fix all comments in pull request #1
* ftp tests - WIP
* run host tests on multiple hosts from topo file
* add base class for unittest
* pytest IV
* pure pytest III
* pure pytest II
* first draft of pure pytest with fixtures
* WIP with Linn
* fix pytest lab\_factory
* cybereason cleanup
* Linux install test - WIP.
* fix all comments in pull request #1
* ftp tests - WIP
* cybereason cleanup
* A missing "f"
* no virtualenv on remote
* Linux install test - WIP.
* How to build requirments.txt
* ROOT\_PATH & root\_path now make sense
* WIP: A better setup.py
* run host tests on multiple hosts from topo file
* add base class for unittest
* pytest IV
* pure pytest III
* cybereason cleanup
* A missing "f"
* no virtualenv on remote
* run interface change to mimic subprocess.run
* move run error check from target to hosts
* pure pytest II
* first draft of pure pytest with fixtures
* WIP with Linn
* test run error code
* create target.py to hold all helpers that should run on target machine
* Fix host's ROOT\_PATH
* Revert "Remove unused SpyServerBox"
* cybereason install test passes on remote windows
* Remove unused SpyServerBox
* bbtest passes on remote win, linux AND OSX
* 100% coverage for labs.py
* Remove pipenv dependency - issue #15
* 100% coverage for labs.py
* Remove pipenv dependency - issue #15
* fixed all comments (but pipenv depandancy) in pull request #14
* improve pytest conftest
* test on actual remote win and linux machine pass
* Update docs
* test on actual remote win machine pass