@@ -1,23 +1,24 @@
 # List of hosts to run tests on.
 # os: the OS of the host - local, win, linux or osx
 # ip: IP address of host
-# user: FTP user, leave empty for anonymous
-# pw: FTP password, leave empty for anonymous
+# auth: list of FTP user, leave empty for anonymous, FTP password, leave empty for anonymous
 
 -
-  class: local
+  os: local
   ip: ''
-  user: ''
-  pw: ''
 
 -
-  class: linux
+  os: linux
   ip: localhost
-  user: yoram
-  pw: Tera0917
+  pypi: /home/yoram/workspace/python/bbtest/dist
+  auth:
+    - yoram
+    - Tera0917
 
 #-
-#  class: win
+#  os: win
 #  ip: 192.168.15.23
-#  user: yoram-s
-#  pw: Tera0818
+#  pypi: /home/yoram/workspace/python/bbtest/dist
+#  auth:
+#    - yoram-s
+#    - Tera0818
